<resources>
    <string name="app_name">getPARK</string>

    <string name="nav_open" translatable="false">Open</string>
    <string name="nav_close" translatable="false">Close</string>
    <string name="menu" translatable="false">menu</string>
    <string name="title_activity_general" translatable="false">GeneralActivity</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_my_cars">My cars</string>
    <string name="menu_pay">Pay methods</string>
    <string name="menu_map">Map</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_my_booking">My booking</string>
    <string name="menu_my_promocodes">Promocodes</string>
    <string name="menu_howit">How it works</string>
    <string name="detail_menu">Detail</string>
    <string name="booking">Booking</string>
    <string name="datetitle">Select date</string>
    <string name="monthtitle">Select month</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="user_agreement_privacy_policy">I agree with the <a href="https://google.com"> Terms of Service </a> and <a href="https://google.com"> Policy </a></string>
</resources>